--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.8.0",
     "chai": "^4.1.2",
     "core-js": "2",
     "eslint": "^5.8.0",
@@ -40,6 +41,7 @@
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
     "typescript": "^3.2.1",
+    "vue-cli-plugin-iview": "^1.0.6",
     "vue-lazyload": "^1.2.6",
     "vue-template-compiler": "^2.5.21"
   }
