--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "element-ui": "^2.6.3",
+    "element-ui": "^2.9.1",
+    "iview": "^3.4.2",
+    "mavon-editor": "^2.7.4",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
