--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.9.1",
     "iview": "^3.4.2",
     "mavon-editor": "^2.7.4",
@@ -42,9 +43,11 @@
     "node-sass": "^4.9.2",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.2.1",
+    "terser-webpack-plugin": "^2.1.0",
+    "typescript": "^3.6.3",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-lazyload": "^1.2.6",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "webpack-bundle-analyzer": "^3.5.0"
   }
 }
