针对页面实现预渲染

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.9.1",
     "iview": "^3.4.2",
     "mavon-editor": "^2.7.4",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
