--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
@@ -13,7 +13,6 @@
     "axios": "^0.19.0",
     "element-ui": "^2.9.1",
     "iview": "^3.4.2",
-    "mavon-editor": "^2.7.4",
     "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
@@ -48,7 +47,6 @@
     "typescript": "^3.6.3",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-lazyload": "^1.2.6",
-    "vue-template-compiler": "^2.5.21",
-    "webpack-bundle-analyzer": "^3.5.0"
+    "vue-template-compiler": "^2.5.21"
   }
 }
