--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "element-ui": "^2.9.1",
-    "iview": "^3.4.2",
+    "element-ui": "^2.13.0",
+    "iview": "^3.5.4",
     "prerender-spa-plugin": "^3.4.0",
-    "vue": "^2.6.6",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.3.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/mocha": "^5.2.4",
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-e2e-cypress": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-plugin-unit-mocha": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
+    "@types/chai": "^4.2.6",
+    "@types/mocha": "^5.2.7",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-e2e-cypress": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-typescript": "^4.1.1",
+    "@vue/cli-plugin-unit-mocha": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
+    "@vue/eslint-config-standard": "^5.0.1",
+    "@vue/eslint-config-typescript": "^5.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-import": "^1.13.0",
     "chai": "^4.1.2",
-    "core-js": "2",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "fibers": "^3.1.1",
-    "node-sass": "^4.9.2",
-    "sass": "^1.17.2",
-    "sass-loader": "^7.1.0",
+    "core-js": "^3.4.7",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.0.1",
+    "fibers": "^4.0.2",
+    "node-sass": "^4.13.0",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.1.0",
     "typescript": "^3.6.3",
-    "vue-cli-plugin-iview": "^1.0.6",
-    "vue-lazyload": "^1.2.6",
-    "vue-template-compiler": "^2.5.21"
+    "vue-cli-plugin-iview": "^2.0.0",
+    "vue-lazyload": "^1.3.3",
+    "vue-template-compiler": "^2.6.10"
   }
 }
