--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "axios": "^0.19.0",
     "element-ui": "^2.13.0",
     "iview": "^3.5.4",
-    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.10",
-    "vue-class-component": "^7.1.0",
-    "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.3.0",
+    "prerender-spa-plugin": "^3.4.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
     "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-e2e-cypress": "^4.1.1",
     "@vue/cli-plugin-eslint": "^4.1.1",
@@ -39,13 +41,15 @@
     "core-js": "^3.4.7",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "fibers": "^4.0.2",
-    "node-sass": "^4.13.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.1.0",
     "typescript": "^3.6.3",
-    "vue-cli-plugin-iview": "^2.0.0",
     "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.10"
   }
